# EthioCode-ai-Pi-Rideshare

./: .gitignore  .replit  MOBILE-APP-BACKEND-INTEGRATION-SUMMARY.md  capacitor.config.ts  download-qr-codes.html  mobile-app-setup-guide.md  package-lock.json  package-scripts.json  package.json  pyproject.toml  qr-codes.html  replit.md  test_demand_prediction_fixes.py
Downloads/Pi_Rideshare/: # Pi VIP Rideshare - Continuation Report.txt  ActiveRideScreen with CacelRide button Fixed.txt  ActiveRideScreen with Dual Maps and Polyline.txt  ActiveRideScreen with Speed Road and Actual.txt  ActiveRideScreen with Speedometer Cancel StayAwake.txt  How Surge Pricing Works.txt  (+4 more)
attached_assets/: Demographic Dashboard Adjustments_1756564342528.pptx  Pasted--version-5-strategy-EURUSD-Profit-Maximizer-Multi-Timeframe-Adaptive-Strategy-sho-1756169461217_1756169461218.txt  Pasted-irports-to-demonstrate-the-complete-system-Now-let-me-add-a-template-for-all-remaining-airports--1756245441494_1756245441495.txt
download-package/: NATIVE_APPS_SETUP_GUIDE.md  README.txt
driver-app/: README.md  android-network-security-config.xml  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: design-preview.html  manifest.json
ride-share-app-lite/: .gitignore
rider-app/: README.md  android-network-security-config.xml  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
server/: .gitignore.txt  database.js  driver-verification.js  google-auth.js  index.js  package-lock.json  package.json
src/: App.tsx  index.tsx
(+263 files in other folders)
